--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -317,7 +317,7 @@ benchmark: {'838': 19686, '80b': 9, '830': 11176}
 
 830: Interrupt Command Register (ICR)
 
-838: Initial Count register (for Timer), IMICT
+838: Initial Count register (for Timer), TMICT
 
 
 
