--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -34,14 +34,16 @@
 
 从图中可以看到, timer中断大概分为下面几步
 
-1. 虚拟机设置APIC timer, 主要包括两个, 写IMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
+1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
 2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
 3. timer到期会产生中断, 发生vm-exit, 进入KVM中
-        - preemption timer导致的vm-exit
-        - hrtimer到期会产生外部中断, 导致虚拟机vm-exit
+* preemption timer导致的vm-exit
+* hrtimer到期会产生外部中断, 导致虚拟机vm-exit
 4. KVM中调用timer处理函数, 注入中断, 进入guest模式
 5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
 6. KVM中模拟EOI行为后, 进入Guest模式
+
+注: TMICT, Timer Initial Count寄存器
 
 ## 1.2. trace代码
 
@@ -102,7 +104,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 ## 4.1. 定时器的触发
 
 ```cpp
-// 写寄存器 IMICT, 初始计数寄存器, one-shot/period
+// 写寄存器 TMICT, 初始计数寄存器, one-shot/period
 void kvm_lapic_reg_write(struct kvm_lapic *apic, u32 reg, u32 val)
 
         case APIC_TMICT:
@@ -145,14 +147,14 @@ void kvm_set_lapic_tscdeadline_msr(struct kvm_vcpu *vcpu, u64 data)
 
 ```cpp
 start_apic_timer()  // 启动apic timer定时器
- ├─ __start_apic_timer(apic, APIC_TMICT); // 传入 IMICT 初始计数寄存器
+ ├─ __start_apic_timer(apic, APIC_TMICT); // 传入 TMICT 初始计数寄存器
  |   ├─ atomic_set(&apic->lapic_timer.pending, 0); // 清空lapci timer的pending
  |   ├─ set_target_expiration(apic, count_reg); // 设置到期时间, 当前流程中, 周期性/一次性模式情况下才调用, tscdeadline不会调用
  |   |   ├─ ktime_t now = ktime_get(); // 获取当前ktime
- |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即IMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
- |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // IMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
+ |   |   ├─ apic->lapic_timer.period = tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT)); // 设置触发周期时间, 即TMICT初始计数寄存器值, 即TMICT寄存器的值(只不过转换成ns单位)
+ |   |   ├─ apic->lapic_timer.tscdeadline = 0; return false; // TMICT为0的话, 意味着停止一次性/周期性timer, 则设置tscdeadline为0然后返回
  |   |   ├─ limit_periodic_timer_frequency(apic); //
- |   |   ├─ deadline = apic->lapic_timer.period; // 等于IMICT
+ |   |   ├─ deadline = apic->lapic_timer.period; // 等于TMICT
  |   |   ├─ apic->lapic_timer.tscdeadline = kvm_read_l1_tsc(apic->vcpu, tscl) + nsec_to_cycles(apic->vcpu, deadline); // tscdeadline设置, 虚拟机tsc+deadline
  |   |   └─ apic->lapic_timer.target_expiration = ktime_add_ns(now, deadline); // target_expiration设置, now + deadline
  |   └─ restart_apic_timer();  // 重启定时器
@@ -184,7 +186,7 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   ├─ cancel_hv_timer(); // 如果hv timer在使用, 则取消hv timer
  |       |   ├─ (!apic_lvtt_period(apic) && atomic_read(&ktimer->pending)); return; // 如果不是周期性的, 但是存在pending, 直接返回
  |       |   ├─ start_sw_period(); // 周期性或一次性模式, 调用这个
- |       |   |   ├─ (!apic->lapic_timer.period); return; // 如果周期为0(一般是IMICT), 表明停用one-shot或period, 直接返回
+ |       |   |   ├─ (!apic->lapic_timer.period); return; // 如果周期为0(一般是TMICT), 表明停用one-shot或period, 直接返回
  |       |   |   ├─ apic_timer_expired(apic, false); // 当前时间晚于target_expiration, 即已经过期, 则直接注入pending timer irq
  |       |   |   ├─ apic_lvtt_oneshot(apic); return;// 已经到期并且是一次性模式, 则直接结束, 返回
  |       |   |   ├─ advance_periodic_target_expiration();// 已经过期, 对于周期性的, 设置周期性下一次目标超时时间
@@ -233,7 +235,7 @@ static void __start_apic_timer(struct kvm_lapic *apic, u32 count_reg)
 
 只有**周期性/一次性**模式, 才会去调用`set_target_expiration()`**设置目标过期时间**, 再调用`restart_apic_timer()`, 启用apic timer定时器.
 
-如果是**周期性/一次性**模式的话, 但是`set_target_expiration()`返回false的话, 直接返回, 也就是停止timer. 结合代码可以看到, 停止也就是
+如果是**周期性/一次性**模式的话, 但是`set_target_expiration()`返回false的话, 直接返回, 也就是停止timer. 结合代码可以看到, 停止也就是周期性/一次性模式下设置TMICT为0, 符合APIC的硬件语义.
 
 对于tscdeadline模式, 直接调用`restart_apic_timer()`, 启用apic timer定时器
 
@@ -252,8 +254,8 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
         s64 deadline;
         // 当前ktime
         now = ktime_get();
-        // 获取IMICT寄存器值, 设置触发周期时间
-        // 即, IMICT初始计数寄存器值(转换成ns单位)
+        // 获取TMICT寄存器值, 设置触发周期时间
+        // 即, TMICT初始计数寄存器值(转换成ns单位)
         apic->lapic_timer.period =
                         tmict_to_ns(apic, kvm_lapic_get_reg(apic, APIC_TMICT));
         // 如果初始计数寄存器值为0, 则是停止one shot/period
@@ -263,23 +265,23 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                 return false;
         }
 
-        // 再往下面, 说明period即IMICT不为0, 即已经有初始计数值了
+        // 再往下面, 说明period即TMICT不为0, 即已经有初始计数值了
         limit_periodic_timer_frequency(apic);
-        // deadline就是IMICT初始计数寄存器的值(只不过转换成ns单位)
+        // deadline就是TMICT初始计数寄存器的值(只不过转换成ns单位)
         deadline = apic->lapic_timer.period;
         // 周期性/一次性时
         if (apic_lvtt_period(apic) || apic_lvtt_oneshot(apic)) {
-                // 传入的不是IMICT寄存器时, 当前流程不进入
+                // 传入的不是TMICT寄存器时, 当前流程不进入
                 if (unlikely(count_reg != APIC_TMICT)) {
                         // deadline是count_reg寄存器值(只不过转换成ns单位)
                         deadline = tmict_to_ns(apic,
                                      kvm_lapic_get_reg(apic, count_reg));
-                        // count_reg寄存器值小于0的话, 还是使用IMICT寄存器值
+                        // count_reg寄存器值小于0的话, 还是使用TMICT寄存器值
                         if (unlikely(deadline <= 0))
-                                // deadline 还是 IMICT
+                                // deadline 还是 TMICT
                                 deadline = apic->lapic_timer.period;
-                        // count_reg寄存器值大于IMICT值, 即大于初始计数器值
-                        // 使用IMICT值
+                        // count_reg寄存器值大于TMICT值, 即大于初始计数器值
+                        // 使用TMICT值
                         else if (unlikely(deadline > apic->lapic_timer.period)) {
                                 pr_info_ratelimited(
                                     "kvm: vcpu %i: requested lapic timer restore with "
@@ -291,7 +293,7 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
                                     deadline, apic->lapic_timer.period);
                                 // 设置传入的count_reg寄存器为0
                                 kvm_lapic_set_reg(apic, count_reg, 0);
-                                // deadline等于 IMICT
+                                // deadline等于 TMICT
                                 deadline = apic->lapic_timer.period;
                         }
                 }
@@ -306,9 +308,9 @@ static bool set_target_expiration(struct kvm_lapic *apic, u32 count_reg)
 }
 ```
 
-1. 将IMICT初始计数寄存器值(转换成ns单位)作为lapic timer的触发周期, `apic->lapic_timer.period`
+1. 将TMICT初始计数寄存器值(转换成ns单位)作为lapic timer的触发周期, `apic->lapic_timer.period`
 
-`tmict_to_ns()` 用于将**初始计数值**转换成ns单位, 初始计数值类似于IMICT寄存器的值.
+`tmict_to_ns()` 用于将**初始计数值**转换成ns单位, 初始计数值类似于TMICT寄存器的值.
 
 ```cpp
 #define APIC_BUS_CYCLE_NS 1
@@ -319,7 +321,7 @@ static inline u64 tmict_to_ns(struct kvm_lapic *apic, u32 tmict)
 }
 ```
 
-2. 计算deadline, 默认IMICT寄存器的值; 
+2. 计算deadline, 默认TMICT寄存器的值; 
 3. 设置`apic->lapic_timer.tscdeadline`为 `虚拟机tsc + deadline`
 4. 设置`apic->lapic_timer.target_expiration`为 `ktime_get() + deadline`
 
@@ -553,7 +555,7 @@ static void start_sw_period(struct kvm_lapic *apic)
 }
 ```
 
-1. 如果**周期为0**(一般是IMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
+1. 如果**周期为0**(一般是TMICT初始计数寄存器值), 表明**停用oneshot或者周期性**, 则直接返回, 不启用
 2. 如果当前时间晚于目标过期时间, 即**已经过期**的:
 - 调用`apic_timer_expired()`处理过期, 其中会进行中断注入, 下面详细讲
 - 如果是**一次性的话**, 那就此**结束**, 直接返回
