--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -177,9 +177,9 @@ start_apic_timer()  // 启动apic timer定时器
  |       |   ├─ apic_timer_expired(apic, false); // 非周期性, 没有pending且已经到期, 
  |       |   |   ├─ kvm_get_running_vcpu();
  |       |   |   └─ kvm_apic_local_deliver(); //
- |       |   |   |   └─ __apic_accept_irq();
- |       |   |   |       └─ vmx_deliver_posted_interrupt();
- |       |   |   |           └─ kvm_get_running_vcpu();
+ |       |   |       └─ __apic_accept_irq();
+ |       |   |           └─ vmx_deliver_posted_interrupt();
+ |       |   |               └─ kvm_get_running_vcpu();
  |       |   └─ cancel_hv_timer(vcpu); // 非周期性, 没有pending且已经到期, 取消hv timer
  |       |   |   └─ vmx_cancel_hv_timer(); //
  |       ├─ start_sw_timer(); // 不能使用hv timer, 则使用sw timer
