--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -5,7 +5,6 @@
 
 - [1. APIC timer中断](#1-apic-timer中断)
   - [1.1. APIC timer简介](#11-apic-timer简介)
-  - [1.2. trace代码](#12-trace代码)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
@@ -21,6 +20,8 @@
     - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
 - [5.](#5)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
+- [trace过程](#trace过程)
+  - [使用ftrace](#使用ftrace)
 
 <!-- /code_chunk_output -->
 
@@ -45,23 +46,7 @@
 
 注: TMICT, Timer Initial Count寄存器
 
-## 1.2. trace代码
-
-```
-echo nop > /sys/kernel/debug/tracing/current_tracer
-echo > /sys/kernel/debug/tracing/trace
-echo ':mod:kvm' > set_ftrace_filter
-echo ':mod:kvm_amd' >> set_ftrace_filter
-echo ':mod:kvm_intel' >> set_ftrace_filter
-echo pvclock_gtod_notify > set_ftrace_notrace
-echo 1 > /sys/kernel/debug/tracing/tracing_on
-echo function_graph > /sys/kernel/debug/tracing/current_tracer
-```
-
-使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
-
-
-下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
+下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程, 最后有
 
 # 2. 相关结构体
 
@@ -381,7 +366,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
          * even if the deadline timer has expired, i.e. rely on the resulting
          * VM-Exit to recompute the periodic timer's target expiration.
          */
-        // 非周期性
+        // 非周期性, 也就是one-shot或tscdeadline模式
         if (!apic_lvtt_period(apic)) {
                 /*
                  * Cancel the hv timer if the sw timer fired while the hv timer
@@ -492,8 +477,6 @@ static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
         to_vmx(vcpu)->hv_deadline_tsc = -1;
 }
 ```
-
-4. 对于非周期性的, 已经到期了, 则调用`apic_timer_expired()`, 见下面
 
 ### 4.5.2. start_sw_timer(): 使用sw timer
 
@@ -762,6 +745,26 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
                 return HRTIMER_NORESTART;
 }
 ```
+
+# trace过程
+
+## 使用ftrace
+
+```
+echo nop > /sys/kernel/debug/tracing/current_tracer
+echo > /sys/kernel/debug/tracing/trace
+echo ':mod:kvm' > set_ftrace_filter
+echo ':mod:kvm_amd' >> set_ftrace_filter
+echo ':mod:kvm_intel' >> set_ftrace_filter
+echo pvclock_gtod_notify > set_ftrace_notrace
+echo 1 > /sys/kernel/debug/tracing/tracing_on
+echo function_graph > /sys/kernel/debug/tracing/current_tracer
+```
+
+使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
+
+可以看到`tscdeadline_immed`
+
 
 
 http://chinaunix.net/uid-25739055-id-4092821.html
