--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -358,7 +358,7 @@ static bool start_hv_timer(struct kvm_lapic *apic)
                 return false;
         // 设定hv timer正在使用
         ktimer->hv_timer_in_use = true;
-        // 取消lapic timer定时器
+        // 取消lapic hrtimer
         hrtimer_cancel(&ktimer->timer);
 
         /*
@@ -404,7 +404,7 @@ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 
 mwait指令没有透传给虚拟机, 或者不能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer, 为什么???
 
-2. 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`
+2. 设置hv timer, 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`, 设置失败则直接返回
 
 ```cpp
 static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
@@ -456,7 +456,9 @@ static int vmx_set_hv_timer(struct kvm_vcpu *vcpu, u64 guest_deadline_tsc,
 
 其实就是设置`vmx->hv_deadline_tsc = tscl + delta_tsc;`
 
-3. 对于**非周期性**(即`tscdeadline`或`one-shot`), 如果已经有pending的, 则取消hv timer后返回; 如果已经到期, 调用`apic_timer_expired()`再取消hv timer.
+3. 对于**非周期性**(即`tscdeadline`或`one-shot`)
+* 如果已经有pending的, 则取消hv timer后返回; 
+* 如果没有timer pending且已经到期, 调用`apic_timer_expired()`再取消hv timer.
 
 ```cpp
 static void cancel_hv_timer(struct kvm_lapic *apic)
@@ -477,6 +479,8 @@ static void vmx_cancel_hv_timer(struct kvm_vcpu *vcpu)
         to_vmx(vcpu)->hv_deadline_tsc = -1;
 }
 ```
+
+注: 很明显, kvm-unit-test的`tscdeadline_immed`会走这个到这个`apic_timer_expired()`流程
 
 ### 4.5.2. start_sw_timer(): 使用sw timer
 
