--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -5,6 +5,8 @@
 
 - [1. APIC timer中断](#1-apic-timer中断)
   - [1.1. APIC timer简介](#11-apic-timer简介)
+  - [trace](#trace)
+    - [使用ftrace](#使用ftrace)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
@@ -20,8 +22,6 @@
     - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
 - [5.](#5)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
-- [trace过程](#trace过程)
-  - [使用ftrace](#使用ftrace)
 
 <!-- /code_chunk_output -->
 
@@ -45,6 +45,27 @@
 6. KVM中模拟EOI行为后, 进入Guest模式
 
 注: TMICT, Timer Initial Count寄存器
+
+
+## trace
+
+### 使用ftrace
+
+```
+echo nop > /sys/kernel/debug/tracing/current_tracer
+echo > /sys/kernel/debug/tracing/trace
+echo ':mod:kvm' > set_ftrace_filter
+echo ':mod:kvm_amd' >> set_ftrace_filter
+echo ':mod:kvm_intel' >> set_ftrace_filter
+echo pvclock_gtod_notify > set_ftrace_notrace
+echo 1 > /sys/kernel/debug/tracing/tracing_on
+echo function_graph > /sys/kernel/debug/tracing/current_tracer
+```
+
+使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
+
+可以看到`tscdeadline_immed`是直接
+
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程, 最后有
 
@@ -749,25 +770,6 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
                 return HRTIMER_NORESTART;
 }
 ```
-
-# trace过程
-
-## 使用ftrace
-
-```
-echo nop > /sys/kernel/debug/tracing/current_tracer
-echo > /sys/kernel/debug/tracing/trace
-echo ':mod:kvm' > set_ftrace_filter
-echo ':mod:kvm_amd' >> set_ftrace_filter
-echo ':mod:kvm_intel' >> set_ftrace_filter
-echo pvclock_gtod_notify > set_ftrace_notrace
-echo 1 > /sys/kernel/debug/tracing/tracing_on
-echo function_graph > /sys/kernel/debug/tracing/current_tracer
-```
-
-使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
-
-可以看到`tscdeadline_immed`是直接
 
 
 
