--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -67,7 +67,7 @@ echo function_graph > /sys/kernel/debug/tracing/current_tracer
 可以看到`tscdeadline_immed`是直接
 
 
-下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程, 最后有
+下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
 # 2. 相关结构体
 
