--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -52,6 +52,7 @@
 ### 1.2.1. 使用ftrace
 
 ```
+cd /sys/kernel/debug/tracing/
 echo nop > /sys/kernel/debug/tracing/current_tracer
 echo > /sys/kernel/debug/tracing/trace
 echo ':mod:kvm' > set_ftrace_filter
