--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -63,6 +63,8 @@ echo 1 > /sys/kernel/debug/tracing/tracing_on
 echo function_graph > /sys/kernel/debug/tracing/current_tracer
 ```
 
+注: 也可以 `echo kvm_set_lapic_tscdeadline_msr > set_graph_function`
+
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
 可以看到`tscdeadline_immed`是直接
