--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -5,8 +5,6 @@
 
 - [1. APIC timer中断](#1-apic-timer中断)
   - [1.1. APIC timer简介](#11-apic-timer简介)
-  - [1.2. trace](#12-trace)
-    - [1.2.1. 使用ftrace](#121-使用ftrace)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
 - [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
@@ -22,6 +20,9 @@
     - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
 - [5.](#5)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
+- [1.2. trace](#12-trace)
+  - [1.2.1. 使用ftrace](#121-使用ftrace)
+    - [tscdeadline](#tscdeadline)
 
 <!-- /code_chunk_output -->
 
@@ -45,30 +46,6 @@
 6. KVM中模拟EOI行为后, 进入Guest模式
 
 注: TMICT, Timer Initial Count寄存器
-
-
-## 1.2. trace
-
-### 1.2.1. 使用ftrace
-
-```
-cd /sys/kernel/debug/tracing/
-echo nop > /sys/kernel/debug/tracing/current_tracer
-echo > /sys/kernel/debug/tracing/trace
-echo ':mod:kvm' > set_ftrace_filter
-echo ':mod:kvm_amd' >> set_ftrace_filter
-echo ':mod:kvm_intel' >> set_ftrace_filter
-echo pvclock_gtod_notify > set_ftrace_notrace
-echo 1 > /sys/kernel/debug/tracing/tracing_on
-echo function_graph > /sys/kernel/debug/tracing/current_tracer
-```
-
-注: 也可以 `echo kvm_set_lapic_tscdeadline_msr > set_graph_function`
-
-使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
-
-可以看到`tscdeadline_immed`是直接
-
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
@@ -774,6 +751,57 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
 }
 ```
 
+# 1.2. trace
+
+## 1.2.1. 使用ftrace
+
+```
+cd /sys/kernel/debug/tracing/
+echo nop > /sys/kernel/debug/tracing/current_tracer
+echo > /sys/kernel/debug/tracing/trace
+echo ':mod:kvm' > set_ftrace_filter
+echo ':mod:kvm_amd' >> set_ftrace_filter
+echo ':mod:kvm_intel' >> set_ftrace_filter
+echo pvclock_gtod_notify > set_ftrace_notrace
+echo 1 > /sys/kernel/debug/tracing/tracing_on
+echo function_graph > /sys/kernel/debug/tracing/current_tracer
+```
+
+注: 也可以 `echo kvm_set_lapic_tscdeadline_msr > set_graph_function`
+
+使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
+
+### tscdeadline
+
+
+
+```cpp
+ 65)               |  kvm_set_lapic_tscdeadline_msr [kvm]() {
+ 65)               |    __start_apic_timer [kvm]() {
+ 65)               |      restart_apic_timer [kvm]() {
+ 65)   0.127 us    |        kvm_can_use_hv_timer [kvm]();
+ 65)               |        vmx_set_hv_timer [kvm_intel]() {
+ 65)   0.126 us    |          kvm_read_l1_tsc [kvm]();
+ 65)   0.376 us    |        }
+ 65)               |        apic_timer_expired [kvm]() {
+ 65)   0.123 us    |          kvm_get_running_vcpu [kvm]();
+ 65)               |          kvm_apic_local_deliver [kvm]() {
+ 65)               |            __apic_accept_irq [kvm]() {
+ 65)               |              vmx_deliver_posted_interrupt [kvm_intel]() {
+ 65)   0.123 us    |                kvm_get_running_vcpu [kvm]();
+ 65)   0.378 us    |              }
+ 65)   0.656 us    |            }
+ 65)   0.889 us    |          }
+ 65)   1.377 us    |        }
+ 65)               |        cancel_hv_timer.isra.40 [kvm]() {
+ 65)   0.124 us    |          vmx_cancel_hv_timer [kvm_intel]();
+ 65)   0.367 us    |        }
+ 65)   2.926 us    |      }
+ 65)   3.161 us    |    }
+ 65)   3.412 us    |  }
+```
+
+可以看到`tscdeadline_immed`是直接
 
 
 http://chinaunix.net/uid-25739055-id-4092821.html
