--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -5,7 +5,9 @@
 
 # 拦截外部中断
 
-VMM 设置 `pin-based VM-execution control` 字段的“`external-interrupt exiting`” 位为 1, 当处理器收到**未被屏蔽及阻塞的中断请求**时，将直接产生 `VM-exit`。
+VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 字段的“`external-interrupt exiting`” 位为 1, 当处理器收到**未被屏蔽及阻塞的中断请求**时，将直接产生 `VM-exit`。
+
+当虚拟机发生 VM-exit 后, 可以通过清除 `RFLAGS.IF` 来屏蔽中断. 
 
 由**外部中断**产生的 `VM-exit` **不能**被 `eflags.IF` 标志位屏蔽，但可以被 local APIC 的 **TPR** 屏蔽.
 
