--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -23,16 +23,12 @@ VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge
 
 # 转发外部中断
 
-在一个有多个逻辑处理器的平台里，8259 中断控制器的 INTR 输出端接在 CPU 的 LINT0 接口里，其余逻辑处理器的 LINTO 空闲着。但 I/ O APIC 的中断消息可以发送到某个处理器，或者某一组处理器。
+在一个有**多个逻辑处理器**的平台里，**8259 中断控制器**的 **INTR 输出端**接在 **CPU0** 的 **LINT0 接口**里，**其余逻辑处理器**的 LINTO **空闲**着。但 I/O APIC 的中断消息可以发送到**某个处理器**，或者**某一组处理器**。
 
 下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 VMM 转发外部中断的处理过程。假设处理器拥有 4 个逻辑处理器，当用户按下键盘后 8259 的 IRQ 产生中断请求发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
 
 ![2020-08-13-18-40-28.png](./images/2020-08-13-18-40-28.png)
 
-如果当前是在 CPUI 的 guest 运行中用户按下了键盘，那么 VMM 应该将外部中断转
-
-发给 CPUI 处理。显然，只有在 guest 运行中产生了中断 VMMオ需要转发。当 CPUI 并
-
-没有 guest 正在运行，那么就不需要将外部中断转发给 CPUI。
+如果当前是在 CPUI 的 guest 运行中用户按下了键盘，那么 VMM 应该将外部中断转发给 CPUI 处理。显然，只有在 guest 运行中产生了中断 VMMオ需要转发。当 CPUI 并没有 guest 正在运行，那么就不需要将外部中断转发给 CPUI。
 
 另一个情况是，当 CPUO 的 guest 运行中产生了中断，CPUO 的 VMM 就直接拦截了。此时不需要转发给其他的 CPU 处理。
