--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -25,7 +25,7 @@ VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge
 
 在一个有**多个逻辑处理器**的平台里，**8259 中断控制器**的 **INTR 输出端**接在 **CPU0** 的 **LINT0 接口**里，**其余逻辑处理器**的 LINTO **空闲**着。但 I/O APIC 的中断消息可以发送到**某个处理器**，或者**某一组处理器**。
 
-下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 VMM 转发外部中断的处理过程。假设处理器拥有 4 个逻辑处理器，当用户按下键盘后 8259 的 IRQ 产生中断请求发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
+下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 **VMM 转发外部中断的处理过程**。假设处理器拥有 4 个逻辑处理器，当用户**按下键盘**后 8259 的 IRQ 产生中断请求发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
 
 ![2020-08-13-18-40-28.png](./images/2020-08-13-18-40-28.png)
 
