--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -25,10 +25,31 @@ VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge
 
 在一个有**多个逻辑处理器**的平台里，**8259 中断控制器**的 **INTR 输出端**接在 **CPU0** 的 **LINT0 接口**里，**其余逻辑处理器**的 LINTO **空闲**着。但 I/O APIC 的中断消息可以发送到**某个处理器**，或者**某一组处理器**。
 
-下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 **VMM 转发外部中断的处理过程**。假设处理器拥有 4 个逻辑处理器，当用户**按下键盘**后 8259 的 IRQ 产生中断请求发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
+下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 **VMM 转发外部中断的处理过程**。假设处理器拥有 4 个逻辑处理器，当用户**按下键盘**后 8259 的 IRQ 产生**中断请求**发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
 
 ![2020-08-13-18-40-28.png](./images/2020-08-13-18-40-28.png)
 
-如果当前是在 CPUI 的 guest 运行中用户按下了键盘，那么 VMM 应该将外部中断转发给 CPUI 处理。显然，只有在 guest 运行中产生了中断 VMMオ需要转发。当 CPUI 并没有 guest 正在运行，那么就不需要将外部中断转发给 CPUI。
+如果当前是在 CPU1 的 guest 运行中用户按下了键盘，那么 VMM 应该将外部中断转发给 CPU1 处理。显然，**只有在 guest 运行中**产生了**中断VMMオ需要转发**。当 CPU1 并没有 guest 正在运行，那么就不需要将外部中断转发给 CPUI。
 
-另一个情况是，当 CPUO 的 guest 运行中产生了中断，CPUO 的 VMM 就直接拦截了。此时不需要转发给其他的 CPU 处理。
+另一个情况是，当 CPUO 的 guest 运行中产生了中断，CPUO 的 VMM 就**直接拦截**了。此时**不需要转发给其他的 CPU 处理**。
+
+
+
+如上面的伪代码所示，在 CPUO 的中断例程里需要检查是否有处理器需要转发中断。如果有则取出中断向量号，以 Fixed delivery 模式发送 IP 到目标处理器。
+
+目标处理器收到 IPI 后，由于“external- Interrupt exiting”为 1 而产生 VM-exit。因此，目标处理器的 VMM 拦截了外部中断，然后反射给 guest 处理。
+
+当然，如果目标处理器 VMCS 的“external- Interrupt exiting”为 0, 则直接由 guest 接收到 CPUO 发过来的中断，从而直接在 guest-IDT 里 deliver 执行。
+
+如果使用 IO APIC 作为中断控制器，VMM 则可以设置物理/ O APIC 的发送目标从而达到转发中断目的。取决于 VMM 的设计模型，可以让 VMM 与 guest 强制使用相同的某类中断控制器（8259 或者 I/ APIC），或者 VMM 与 guest 使用不同类型的中断控制器。
+
+注意：中断转发需要满足下面三个条件。
+
+(1) 目标处理器处于焦点状态，这个条件由 SDA.Infocus 来控制。
+
+(2) 目标处理器的 guest 正在运行状态，这个状态由 PCB.ProcessorStatus 记录。
+
+(3) 目标处理器的 guest 拥有焦点状态，这个状态由 PCB.ProcessorStatus 记录。
+
+下面是来自 lib\pic8259A.asm 文件的 keyboard_8259_handler 例程部分代码，它执行上述的条件检查并发送 IPI 消息。
+
