--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -53,3 +53,39 @@ VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge
 
 下面是来自 lib\pic8259A.asm 文件的 keyboard_8259_handler 例程部分代码，它执行上述的条件检查并发送 IPI 消息。
 
+```x86asm
+keyboard_8259_handler.SendExtIntIpi:
+        ;;
+        ;; 检查目标处理器是否拥有焦点
+        ;;
+        cmp edx, [ebx + EXTINT_RTE.ProcessorIndex]
+        jne keyboard_8259_handler.SendExtIntIpi.Next
+
+        mov esi, edx
+        call get_processor_pcb
+        REX.Wrxb
+        test eax, eax
+        jz keyboard_8259_handler.SendExtIntIpi.Next
+
+        ;;
+        ;; 检查目标处理器是否处于 guest，并且拥有焦点
+        ;;
+        mov esi, [eax + PCB.ProcessorStatus]
+        xor esi, CPU_STATUS_GUEST | CPU_STATUS_GUEST_FOCUS
+        test esi, CPU_STATUS_GUEST | CPU_STATUS_GUEST_FOCUS
+        jnz keyboard_8259_handler.SendExtIntIpi.Next
+
+        DEBUG_RECORD    "sending IPI to target processor !"
+        
+        ;;
+        ;; 发送外部中断到目标处理器
+        ;;
+        mov esi, [eax + PCB.ApicId]
+        movzx edi, BYTE [ebx + EXTINT_RTE.Vector]               ; 8259 的 IRQ0 vector
+        INCv edi                                                ; 得到键盘中断 IRQ1 vector
+        or edi, FIXED_DELIVERY | PHYSICAL        
+        SEND_IPI_TO_PROCESSOR esi, edi
+```
+
+# 监控guest设置8259
+
