--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -89,3 +89,21 @@ keyboard_8259_handler.SendExtIntIpi:
 
 # 监控guest设置8259
 
+
+
+## 处理8259初始化流程
+
+
+
+# 示例
+
+>实现外部中断转发, 处理CPU1 guest的键盘中断
+
+在例子`7-4`(`拦截INT指令`节)的代码基础上, 实现这个例子. 这个例子需要实现外部中断的转发, 用来处理来自CPU1 guest的键盘中断.
+
+## guest端代码
+
+在`guest_ex.asm`模块中, 首先对**8259A**进行**初始化**设置, 然后建立8259A的**IRQ1中断例程**.
+
+
+
