--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -105,5 +105,149 @@ keyboard_8259_handler.SendExtIntIpi:
 
 在`guest_ex.asm`模块中, 首先对**8259A**进行**初始化**设置, 然后建立8259A的**IRQ1中断例程**.
 
+```x86asm
+        ;;
+        ;; 初始化 8259
+        ;;
+        cli
+        call init_pic8259
+        call disable_8259
+        call enable_8259_keyboard
+        sti
+        
+        ;;
+        ;; 设置 IRQ1 中断 handler
+        ;;
+        sidt [Guest.IdtPointer]
+        mov ebx, [Guest.IdtPointer + 2]
+
+%if __BITS__ == 64
+        add ebx, (GUEST_IRQ1_VECTOR * 16)
+        mov rsi, (0FFFF800080000000h + GuestKeyboardHandler)
+        mov [rbx + 4], rsi
+        mov [rbx], si
+        mov WORD [rbx + 2], GuestKernelCs64
+        mov WORD [rbx + 4], 08E01h                      ; DPL = 0, IST = 1
+        mov DWORD [rbx + 12], 0
+%else
+        add ebx, (GUEST_IRQ1_VECTOR * 8)
+        mov esi, (80000000h + GuestKeyboardHandler)
+        mov [ebx + 4], esi
+        mov [ebx], si
+        mov WORD [ebx + 2], GuestKernelCs32
+        mov WORD [ebx + 4], 08E00h                      ; DPL = 0
+%endif
+
+
+        mov esi, GuestEx.Msg0
+        call PutStr
+
+GuestEx.Loop:
+        call WaitKey
+        movzx esi, BYTE [KeyMap + R0]
+        call PutChar
+        jmp GuestEx.Loop
+
+
+        jmp $
+
+        ;;
+        ;; 进入 user 权限
+        ;;
+%if __BITS__ == 64
+        push GuestUserSs64 | 3
+        push 2FFF0h
+        push GuestUserCs64 | 3
+        push GuestEx.UserEntry
+        retf64
+%else
+        push GuestUserSs32 | 3
+        push 2FFF0h
+        push GuestUserCs32 | 3
+        push GuestEx.UserEntry
+        retf
+%endif        
+
+GuestEx.UserEntry:
+        mov ax, GuestUserSs32
+        mov ds, ax
+        mov es, ax
+        jmp $
+
+
+
+
+;--------------------------------------------------
+; GuestKeyboardHandler:
+; 描述：
+;       使用于 8259 IRQ1 handler
+;--------------------------------------------------
+GuestKeyboardHandler:
+        push R3
+        push R6
+        push R7
+        push R0
+
+        
+        in al, I8408_DATA_PORT                          ; 读键盘扫描码
+        test al, al
+        js GuestKeyboardHandler.done                    ; 为 break code
+  
+
+        mov ebx, KeyBufferPtr
+        mov esi, [ebx]
+        inc esi
+        
+        ;;
+        ;; 检查是否超过缓冲区长度
+        ;;
+        mov edi, KeyBuffer
+        cmp esi, KeyBuffer + 255
+        cmovae esi, edi
+        mov [esi], al                                           ; 写入扫描码
+        mov [ebx], esi                                         ; 更新缓冲区指针 
+ 
+GuestKeyboardHandler.done:
+	mov al, 00100000B				        ; OCW2 select, EOI
+	out MASTER_OCW2_PORT, al
+        pop R0
+        pop R7
+        pop R6
+        pop R3
+%if __BITS__ == 64
+        iretq
+%else
+        iret
+%endif
+        
+        
+GuestEx.Msg0    db      'wait any keys: ', 0
+```
+
+guest的工作主要是:
+
+(1) 初始化 8259A 后，**屏蔽其他 IRQ**，但**打开 IRQ1**。
+
+(2) 设置 **IRQ1** 对应的 **IDT 描述符**，并且提供一个 **IRQ1 中断对应的服务例程**。
+
+(3) 进入**循环**，不断调用 **WaitKey** 函数**等待用户按键**。Witkey 直到发生按键后返回键盘扫描码，guest 根据扫描码打印出字符。
+
+Guest Keyboardhandler 中断例程只是简单地读取扫描码，保存在键盘 buffer 里。 Wait Key 函数将会在键盘 buffer 里读取扫描码返回。 Witkey实现在 lib Guest Guestcrt.asm 文件里。
+
+2. 监控访问8259A 端口
+
+ex.asm 模块在调用 Init guest a 与 init guest b 初始化 VMCS 时，调用  set 10_ bitmap for_8259 来设置对 8259A 端口 2h、21h、Ah 以及 Ah 的访问监控。
+
+3. 编译及运行
+
+可以使用下面的三个命令进行编译及生成目标映像文件：
+
+ BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE-D X64-DGUEST X64  BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE-D X64
+
+ BUILD-DDEBUG RECORD ENABLE-DGUEST ENABLE
+
+在 Vmware 上运行 demo.img 映像后，在 CPUO 屏幕的命令选择器里按下数字《1> 键，让 CPUI 进入 guest 运行
+
+接着按下两次《F2> 键，切换到 CPU 的 guest 屏幕，如图 7-14 所示
 
 
