--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -230,9 +230,9 @@ guest的工作主要是:
 
 (2) 设置 **IRQ1** 对应的 **IDT 描述符**，并且提供一个 **IRQ1 中断对应的服务例程**。
 
-(3) 进入**循环**，不断调用 **WaitKey** 函数**等待用户按键**。Witkey 直到发生按键后返回键盘扫描码，guest 根据扫描码打印出字符。
+(3) 进入**循环**，不断调用 **WaitKey** 函数**等待用户按键**。Witkey 直到**发生按键**后**返回键盘扫描码**，**guest 根据扫描码打印出字符**。
 
-Guest Keyboardhandler 中断例程只是简单地读取扫描码，保存在键盘 buffer 里。 Wait Key 函数将会在键盘 buffer 里读取扫描码返回。 Witkey实现在 lib Guest Guestcrt.asm 文件里。
+GuestKeyboardHandler 中断例程只是简单地读取扫描码，保存在键盘 buffer 里。 WaitKey 函数将会在键盘 buffer 里读取扫描码返回。 Witkey实现在 `lib\Guest\GuestCrt.asm` 文件里。
 
 2. 监控访问8259A 端口
 
