--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -3,7 +3,7 @@
 
 对于外部中断，处理器可以接收从**中断控制器**（**8259**、**I0APIC** 或者 **local APIC**）来的中断请求，也可以接收来自**处理器间**以 **Fixed delivery** 模式发送的 **IPI** 消息。
 
-# 拦截外部中断
+# 1. 拦截外部中断
 
 VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 字段的“`external-interrupt exiting`” 位为 1, 当处理器收到**未被屏蔽及阻塞的中断请求**时，将直接产生 `VM-exit`。
 
@@ -21,7 +21,7 @@ VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 
 
 VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge interrupt on Exit” 为 1。产生 `VM-exit` 后，VWMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 guest-DT 进行 delivery 操作。
 
-# 转发外部中断
+# 2. 转发外部中断
 
 在一个有**多个逻辑处理器**的平台里，**8259 中断控制器**的 **INTR 输出端**接在 **CPU0** 的 **LINT0 接口**里，**其余逻辑处理器**的 LINTO **空闲**着。但 I/O APIC 的中断消息可以发送到**某个处理器**，或者**某一组处理器**。
 
@@ -87,21 +87,21 @@ keyboard_8259_handler.SendExtIntIpi:
         SEND_IPI_TO_PROCESSOR esi, edi
 ```
 
-# 监控guest设置8259
+# 3. 监控guest设置8259
 
 
 
-## 处理8259初始化流程
+## 3.1. 处理8259初始化流程
 
 
 
-# 示例
+# 4. 示例
 
 >实现外部中断转发, 处理CPU1 guest的键盘中断
 
 在例子`7-4`(`拦截INT指令`节)的代码基础上, 实现这个例子. 这个例子需要实现外部中断的转发, 用来处理来自CPU1 guest的键盘中断.
 
-## guest端代码
+## 4.1. guest端代码
 
 在`guest_ex.asm`模块中, 首先对**8259A**进行**初始化**设置, 然后建立8259A的**IRQ1中断例程**.
 
@@ -234,11 +234,11 @@ guest的工作主要是:
 
 GuestKeyboardHandler 中断例程只是简单地读取扫描码，保存在键盘 buffer 里。 WaitKey 函数将会在键盘 buffer 里读取扫描码返回。 Witkey实现在 `lib\Guest\GuestCrt.asm` 文件里。
 
-2. 监控访问8259A 端口
+## 4.2. 监控访问8259A 端口
 
-ex.asm 模块在调用 Init guest a 与 init guest b 初始化 VMCS 时，调用  set 10_ bitmap for_8259 来设置对 8259A 端口 2h、21h、Ah 以及 Ah 的访问监控。
+ex.asm 模块在调用 `init_guest_a` 与 `init_guest_b` 初始化 VMCS 时，调用  `set_io_bitmap_for_8259` 来设置对 8259A 端口 20h、21h、A0h 以及 A1h 的访问监控。
 
-3. 编译及运行
+## 4.3. 编译及运行
 
 可以使用下面的三个命令进行编译及生成目标映像文件：
 
@@ -250,4 +250,14 @@ ex.asm 模块在调用 Init guest a 与 init guest b 初始化 VMCS 时，调用
 
 接着按下两次《F2> 键，切换到 CPU 的 guest 屏幕，如图 7-14 所示
 
+![2020-08-13-22-35-41.png](./images/2020-08-13-22-35-41.png)
 
+
+
+
+
+
+
+
+
+注意：VMM 必须要发送 **EOI** 给 **local APIC**, 处理器オ可能响应下一次的中断消息. 所以，每次经过前面所述的处理中断步骤后，就遇到 guest 执行 OUT 指令发送 EOI 指令。VMM 拦截后，由 VMM 来写 EOI 命令
