--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -31,44 +31,26 @@ VMM 需要在 `posted-interrupt descriptor address` 字段里提供一个 64 位
 
 <table>
     <tr>
-        <th>设备</th>
-        <th>设备文件名</th>
-        <th>文件描述符</th>
-        <th>类型</th>
+        <th>位域</th>
+        <th>名字</th>
+        <th>描述</th>
     </tr>
     <tr>
-        <td>键盘</td>
-        <td>/dev/stdin</td>
-        <th>0</td>
-        <th>标准输入</th>
+        <td>255:0</td>
+        <td>posted-interrupt requests</td>
+        <td>PIR(posted-interrupt request)，某位为 1 时表明存在相应的posted-interrupt请求</td>
     </tr>
     <tr>
-        <th>显示器</th>
-        <th>/dev/stdout</th>
-        <th>1</th>
-        <th>标准输出</th>
+        <td>256</td>
+        <td>outstanding notification</td>
+        <td>ON(待处理通知位)，为 1 时表明有一个或多个posted-interrupt 请求需要处理</td>
     </tr>
     <tr>
-        <th>显示器</th>
-        <th>/dev/stderr</th>
-        <th>2</th>
-        <th>标准错误输出</th>
+        <td>511:257</td>
+        <td>software available</td>
+        <td>AVL(软件可用位)，此部分保留给软件使用, 处理器不会修改此域</td>
     </tr>
 </table>
-
-位域 | 名字 | 描述
-----|------|----
-255:0 | posted-interrupt requests | PIR(posted- Interrupt request），某位为 1 时表明
-
-存在相应的 posted- Interrupt 请求
-
- outstanding notification ON（待处理通知位），为 1 时表明有一个或多个
-
- posted- Interrupt 请求需要处理
-
-511:257  software available AVL（软件可用位），此部分保留给软件使用
-
-处理器不会修改此域
 
 描述符的 bis25:0 是 PIR (posted- Interrupt request）域，每一位对应一个中断向量号，（譬如 bit60 对应中断向量号 60)。某位为 1 时表明出现了该位对应的中断请求（中断向量号对应为该位）。bit256 是 ON (outstanding notification）位，为 1 时表明 PIR 中有一个或多个 posted-interrupt 需要处理。处理器不使用及修改 bits511:257 位域部分，保留给软件使用。
 
