--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -37,25 +37,25 @@ VMM 需要在 `posted-interrupt descriptor address` 字段里提供一个 64 位
     </tr>
     <tr>
         <td>255:0</td>
-        <td>posted-interrupt requests</td>
+        <td width="235">posted-interrupt requests</td>
         <td>PIR(posted-interrupt request)，某位为 1 时表明存在相应的posted-interrupt请求</td>
     </tr>
     <tr>
         <td>256</td>
         <td>outstanding notification</td>
-        <td>ON(待处理通知位)，为 1 时表明有一个或多个posted-interrupt 请求需要处理</td>
+        <td>ON(待处理通知位), 为1时表明有一个或多个posted-interrupt请求需要处理</td>
     </tr>
     <tr>
         <td>511:257</td>
         <td>software available</td>
-        <td>AVL(软件可用位)，此部分保留给软件使用, 处理器不会修改此域</td>
+        <td>AVL(软件可用位), 此部分保留给软件使用, 处理器不会修改此域</td>
     </tr>
 </table>
 
-描述符的 bis25:0 是 PIR (posted- Interrupt request）域，每一位对应一个中断向量号，（譬如 bit60 对应中断向量号 60)。某位为 1 时表明出现了该位对应的中断请求（中断向量号对应为该位）。bit256 是 ON (outstanding notification）位，为 1 时表明 PIR 中有一个或多个 posted-interrupt 需要处理。处理器不使用及修改 bits511:257 位域部分，保留给软件使用。
+描述符的 `bis 255:0` 是 PIR (posted- Interrupt request）域，每一位对应一个中断向量号，（譬如 bit60 对应中断向量号 60)。某位为 1 时表明出现了该位对应的中断请求（中断向量号对应为该位）。bit256 是 ON (outstanding notification）位，为 1 时表明 PIR 中有一个或多个 posted-interrupt 需要处理。处理器不使用及修改 bits511:257 位域部分，保留给软件使用。
 
 注意：posted-interrupt 描述与 VMCS 使用的其他数据结不同（如 exception  bitmap、/ O bitmap、MSR bitmap 等）。当 VMCS 所对应的 VM 正在运行时（进入 VMX  non-root operation 模式）, VMM 不能修改这些数据结构。
 
-而 posted- Interrupt 描述符允许在 VM 运行时被 VMM 修改（修改其他逻辑处理器的  posted- Interrupt 描述符），但必须使用 locked 的“read- modify- write”操作。如下面的代码所示：
+而 posted-interrupt 描述符允许在 VM 运行时被 VMM 修改（修改其他逻辑处理器的  posted-interrupt 描述符），但必须使用 locked 的 “**read-modify-write**” 操作。如下面的代码所示：
 
 
