--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/14. posted-interrupt处理.md
@@ -58,4 +58,51 @@ VMM 需要在 `posted-interrupt descriptor address` 字段里提供一个 64 位
 
 而 posted-interrupt 描述符允许在 VM 运行时被 VMM 修改（修改其他逻辑处理器的  posted-interrupt 描述符），但必须使用 locked 的 “**read-modify-write**” 操作。如下面的代码所示：
 
+```
+lock or DWORD  [rbx + VMB.PostedInterruptDesc + (61h / 8)], (1 << (61h & 7))
+```
 
+上面的代码中，VMM 将 61h 号中断向量在 posted-interrupt 描述符 PIR 对应的位置 1, 使用了加了 lock 前缀的 OR 指令完成。这个操作允许在目标 VMCS 对应的 guest 正在运行时设置。
+
+# Posted-interrupt 处理流程
+
+在启用 posted- Interrupt processing 机制后，处理器对外部中断的处理将有很大的不同。
+
+* 在一般情况下，当“external-interrupt exiting”为 1, 处理器接收到外部中断则产生 VM-exit. "external-interrupt exiting"为 0, 则通过 guest-IDT 进行 deliver 执行。
+* 在 posted-interrupt processing 机制下，“external-interrupt exiting”与“acknowledge  interrupt on exit”位必须为 1。当处理器接收到的外部中断向量号是通知向量号(notification vector)时不会产生 VM-exit，否则将产生 Vm-exit。
+
+当接收到的外部中断向量号等于通知向量号时不会产生 VM-exit，而是进行 PIR(posted-interrupt request) 的 pending 处理(如图 7-8 所示)。
+
+处理器执行的 posted-interrupt 处理流程如下面的伪码所示。
+
+
+
+当 local APIC 接收或产生外部中断时，处理器执行下面的 posted- Interrupt 处理流程： 
+
+(1) 处理器响应 local APIC 后，读取外部中断向量号（即前面所说的 physical
+
+(2) 检查外部中断的向量号是否等于 notification vector（通知向量号），不等于则产生 VM-exit，相等则继续下面的处理。在这个步骤里检查这个外部中断是否为通知中断
+
+(3) 处理器清 posted- interrupt 描述符内的 ON 位（outstanding notification, bit 256），这个动作类似于执行一条 locked 的 AND 指令（AND 指令清位操作）。清 ON 位的作用是锁上 posted-interrupt 描述符不允许修改。
+
+(4) 处理器自动向 local APIC 发送一条 EOI 命令（清 EOI 寄存器），这个操作将驱散通知中断。因此，通知中断不会被 deliver 执行。
+
+(5) 处理器从 posted- Interrupt 描述符里读取 PIR (bis25:0），将 PIR 执行“逻辑或”在 VIRR 上（也就是将 PIR 的中断请求列表 pending 在 VIRR 里，形成新的虚拟中断请求），并且将 PIR 列表清空。在这一步操作里，没有其他的访问者（譬如处理器、芯片组等）可以访问 PIR 位城。
+
+(6) 处理器更新 RVI 值。从 PIR 请求列表里取出优先级别最高的中断请求，与原 RVI 值进行比较。取两者最高的值作为新的 RMI 值。显然，当 PIR 中断请求列表为空时，RV 值维护不变。
+
+(7) 处理器最后执行虚拟中断的评估与 delivery 操作（参见 7.2.13 节）。虚拟中断是否能被组织 pending 取决于评估的结果。
+
+在上面的 1 到 7 步骤里不允许被其他事件中断。在第 7 步里，虚拟中断一旦被组织就会立即执行虚拟中断的 delivery（参见 7.2.13.2)。如前面 7.2.13.1 节所述，未被屏蔽的虚拟中断 delivery 可以唤醒处理器的 HLT状态，但在 shutdown或 wait-for-SIPI状态下被阻塞.
+
+# posted-interrupt 的使用
+
+guest 收到的通知中断可以是来自中断控制器（響如 8259、I/OAPIC、local APIC），可以是处理器发出的 IPl。posted- Interrupt processing 机制的典型用法是：在多处理器平台里，一个逻辑处理器正处于 VMX non- root operation 模式里运行（guest），而另一个逻辑处理器以 IPI 的形式发送一个通知中断给这个 guest。如图 7-9 所示
+
+![2020-08-13-23-38-59.png](./images/2020-08-13-23-38-59.png)
+
+VMM 分配一个具有高优先级别的向量号作为 notification vector（通知向量）保存在  posted-interrupt notification vector 字段里，以便在虚拟中断的评估环节里可以获得评估通过（参见 72.13.1 节）。
+
+VMM 也要为目标 guest 分配虚拟中断向量号，通过 guest-IDT 进行 deliver 执行。VMM 使用通知向量号发送 IPI 给目标处理器(正在运行 guest)，目标处理器接收到 IP 后进行 posted-interrupt 处理。
+
+另外，VMM 可以在 posted-interrupt 描述符内的 PIR 里张贴多个虚拟中断请求，那么 uest 根据仲裁情况可以执行多个虚拟中断处理。
