--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -13,11 +13,11 @@ VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 
 
 在拦截外部中断产生 VM-exit 后，取决于 VM exit control 字段“acknowledge interrupt  on exit”位的设置，VMM 有不同的应对处理。
 
-* “acknowledge interrupt on exit”为 1 时，在 VM-exit 时处理器响应中断控制器，从中断控制器里取出外部中断的信息，记录在 VM- exit interruption information 字段里（参见 3.10.2.1 节）。
+* “acknowledge interrupt on exit”为 1 时，在 **VM-exit** 时处理器响应中断控制器，从**中断控制器**里取出**外部中断的信息**，记录在 `VM-exit interruption information` 字段里（参见 3.10.2.1 节）。
 
-* “acknowledge interrupt on exit”为 0 时，外部中断在中断控制器 IRR (Interrupt  equest register）里的请求位保持有效，中断被悬挂着，VM- exit interruption  information 字段属于无效。VMM 执行 STI 指令后重新打开中断时，处理器才响应中断控制器取得中断向量号。
+* “acknowledge interrupt on exit”为 0 时，**外部中断**在中断控制器 **IRR** (Interrupt  equest register）里的**请求位保持有效**，中断**被悬挂着**，`VM-exit interruption information` 字段属于**无效**。VMM 执行 **STI** 指令后重新打开中断时，**处理器才响应中断控制器取得中断向量号**。
 
-当 VMM 想夺取对外部中断 delivery 的控制权时，需要设置 “acknowledge interrupt on exit” 为 0, 发生 `VM-exit` 后，VMM 在重新打开中断许可时（执行 STI 或 POPF 指令），处理器响应中断控制器并通过 host-IDT 进行外部中断的 delivery 操作。
+当 **VMM** 想夺取对外部中断 delivery 的**控制权**时，需要设置 “acknowledge interrupt on exit” 为 **0**, 发生 `VM-exit` 后，VMM 在**重新打开中断许可时**（执行 STI 或 POPF 指令），处理器**响应中断控制器**并通过 `host-IDT` 进行外部中断的 delivery 操作。
 
 VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge interrupt on Exit” 为 1。产生 `VM-exit` 后，VWMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 guest-DT 进行 delivery 操作。
 
