--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -17,9 +17,13 @@ VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 
 
 * “acknowledge interrupt on exit”为 0 时，**外部中断**在中断控制器 **IRR** (Interrupt  equest register）里的**请求位保持有效**，中断**被悬挂着**，`VM-exit interruption information` 字段属于**无效**。VMM 执行 **STI** 指令后重新打开中断时，**处理器才响应中断控制器取得中断向量号**。
 
-当 **VMM** 想夺取对外部中断 delivery 的**控制权**时，需要设置 “acknowledge interrupt on exit” 为 **0**, 发生 `VM-exit` 后，VMM 在**重新打开中断许可时**（执行 STI 或 POPF 指令），处理器**响应中断控制器**并通过 `host-IDT` 进行外部中断的 delivery 操作。
+## 1.1. host-IDT delivery
 
-VMM 需要反射外部中断给 guest 处理时，则需要设置 “acknowledge interrupt on Exit” 为 1。产生 `VM-exit` 后，VWMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 guest-DT 进行 delivery 操作。
+当 **VMM** 想夺取对外部中断 delivery 的**控制权**时，需要设置 “acknowledge interrupt on exit” 为 **0**, 发生 `VM-exit` 后，VMM 在**重新打开中断许可时**（执行 STI 或 POPF 指令）, 处理器**响应中断控制器**并通过 `host-IDT` 进行外部中断的 delivery 操作。
+
+## 1.2. Guest-IDT delivery
+
+VMM 需要**反射外部中断**给 **guest** 处理时，则需要设置 “acknowledge interrupt on Exit” 为 **1**。产生 `VM-exit` 后，VMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 guest-IDT 进行 delivery 操作。
 
 # 2. 转发外部中断
 
