--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/3. 中断处理/3. 处理外部中断.md
@@ -19,25 +19,38 @@ VMM 设置 **VM-execution 控制类字段**中 `pin-based VM-execution control` 
 
 ## 1.1. host-IDT delivery
 
-当 **VMM** 想夺取对外部中断 delivery 的**控制权**时，需要设置 “acknowledge interrupt on exit” 为 **0**, 发生 `VM-exit` 后，VMM 在**重新打开中断许可时**（执行 STI 或 POPF 指令）, 处理器**响应中断控制器**并通过 `host-IDT` 进行外部中断的 delivery 操作。
+当 **VMM** 想夺取对外部中断 delivery 的**控制权**时，需要设置 “acknowledge interrupt on exit” 为 **0**.
+
+发生 `VM-exit` 后，VMM 在**重新打开中断许可时**（执行 STI 或 POPF 指令）, 处理器**响应中断控制器**并通过 `host-IDT` 进行外部中断的 delivery 操作。
 
 ## 1.2. Guest-IDT delivery
 
-VMM 需要**反射外部中断**给 **guest** 处理时，则需要设置 “acknowledge interrupt on Exit” 为 **1**。产生 `VM-exit` 后，VMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 guest-IDT 进行 delivery 操作。
+VMM 需要**反射外部中断**给 **guest** 处理时，则需要设置 “acknowledge interrupt on exit” 为 **1**。
+
+产生 `VM-exit` 后，VMM 将 `VM-exit interruption information` 字段的值复制到  `Vm-entry interruption information` 字段后，执行 VMRESUME 指令回到 guest 运行，外部中断通过 **guest-IDT** 进行 delivery 操作。
 
 # 2. 转发外部中断
 
 在一个有**多个逻辑处理器**的平台里，**8259 中断控制器**的 **INTR 输出端**接在 **CPU0** 的 **LINT0 接口**里，**其余逻辑处理器**的 LINTO **空闲**着。但 I/O APIC 的中断消息可以发送到**某个处理器**，或者**某一组处理器**。
 
-下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 **VMM 转发外部中断的处理过程**。假设处理器拥有 4 个逻辑处理器，当用户**按下键盘**后 8259 的 IRQ 产生**中断请求**发给 CPUO, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
+下面我们以 8259 中断控制器发送中断请求给 CPUO 为例，讲解 **VMM 转发外部中断的处理过程**。假设处理器拥有 4 个逻辑处理器，当用户**按下键盘**后 8259 的 IRQ 产生**中断请求**发给 **CPUO**, VMM 需要判断转发给哪个 CPU 执行。如图 7-13 所示。
 
 ![2020-08-13-18-40-28.png](./images/2020-08-13-18-40-28.png)
 
-如果当前是在 CPU1 的 guest 运行中用户按下了键盘，那么 VMM 应该将外部中断转发给 CPU1 处理。显然，**只有在 guest 运行中**产生了**中断VMMオ需要转发**。当 CPU1 并没有 guest 正在运行，那么就不需要将外部中断转发给 CPUI。
+如果当前是在 **CPU1** 的 **guest** 运行中用户按下了键盘，那么 VMM 应该将**外部中断**转发给 **CPU1** 处理。显然，**只有在 guest 运行中**产生了中断VMM**オ需要转发**。当 CPU1 并没有 guest 正在运行，那么就不需要将外部中断转发给 CPU1。
 
 另一个情况是，当 CPUO 的 guest 运行中产生了中断，CPUO 的 VMM 就**直接拦截**了。此时**不需要转发给其他的 CPU 处理**。
 
-
+```cpp
+keyboard_handler()
+{
+        ... ...
+        if (processor == get_processor_for_interrupt_dispatch())
+        {
+                
+        }
+}
+```
 
 如上面的伪代码所示，在 CPUO 的中断例程里需要检查是否有处理器需要转发中断。如果有则取出中断向量号，以 Fixed delivery 模式发送 IP 到目标处理器。
 
