--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -7,7 +7,7 @@
   - [1.1. APIC timer简介](#11-apic-timer简介)
 - [2. 相关结构体](#2-相关结构体)
 - [3. 创建和初始化虚拟定时器设备](#3-创建和初始化虚拟定时器设备)
-- [4. 设置定时器Set APIC Timer](#4-设置定时器set-apic-timer)
+- [4. 定时器设置Set APIC Timer](#4-定时器设置set-apic-timer)
   - [4.1. 定时器的触发](#41-定时器的触发)
   - [4.2. 整体流程](#42-整体流程)
   - [4.3. 入口代码](#43-入口代码)
@@ -18,7 +18,7 @@
       - [4.5.2.1. start_sw_period(): 周期性或一次性模式](#4521-start_sw_period-周期性或一次性模式)
       - [4.5.2.2. start_sw_tscdeadline(): tscdeadline模式](#4522-start_sw_tscdeadline-tscdeadline模式)
     - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
-- [5.](#5)
+- [5. timer到期的外部中断](#5-timer到期的外部中断)
   - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
 - [1.2. trace](#12-trace)
   - [1.2.1. 使用ftrace](#121-使用ftrace)
@@ -83,9 +83,9 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
-# 4. 设置定时器Set APIC Timer
+# 4. 定时器设置Set APIC Timer
 
-
+步骤一和步骤二
 
 ## 4.1. 定时器的触发
 
@@ -713,7 +713,18 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 
 `kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
 
-# 5. 
+# 5. timer到期的外部中断
+
+步骤三和步骤四
+
+涉及到 “acknowledge interrupt on exit” 机制, 可以参见intel手册关于外部中断部分.
+
+有两个相关commit: 
+
+f2485b3e0c6c0aa3a9546babc2fad3739e964ebb
+
+d7a08882a0a4b4e176691331ee3f492996579534
+
 
 ## 5.1. apic_timer_fn(): hrtimer到期的响应函数
 
@@ -750,6 +761,9 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
                 return HRTIMER_NORESTART;
 }
 ```
+
+
+
 
 # 1.2. trace
 
