--- a/Linux/Tools/统计运行时间.md
+++ b/Linux/Tools/统计运行时间.md
@@ -1,4 +1,6 @@
 
+1. tsc
+
 ```cpp
 u_int64_t current_cycles()
 {
@@ -12,4 +14,21 @@ start = current_cycles();
 ......
 end = current_cycles();
 printf("cost %u CPU cycles\n", (unsigned)(end - start));
+```
+
+2. gettimeofday
+
+```cpp
+static double getFloatTime()
+{
+        struct timeval t;
+
+        gettimeofday(&t, 0);
+        return (double) t.tv_sec + (double) t.tv_usec / 1000000.0;
+}
+
+double start, end;
+start = getFloatTime();
+end = getFloatTime();
+printf("done: %.4f\n", end - start);
 ```
