--- Auto-Git Commit ---

--- a/Linux/Tools/统计运行时间.md
+++ b/Linux/Tools/统计运行时间.md
@@ -1,4 +1,6 @@
 
+用户态程序:
+
 1. tsc
 
 ```cpp
@@ -19,6 +21,7 @@ printf("cost %u CPU cycles\n", (unsigned)(end - start));
 2. gettimeofday
 
 ```cpp
+
 static double getFloatTime()
 {
         struct timeval t;
